--- a/Builds/VisualStudio2013/Plugins/KWIKFormat/KWIKFormat.vcxproj
+++ b/Builds/VisualStudio2013/Plugins/KWIKFormat/KWIKFormat.vcxproj
@@ -92,7 +92,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>hdf5.lib;hdf5_cpp.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x86;..\..\Debug\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x86;$(GUIDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -105,7 +105,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>hdf5.lib;hdf5_cpp.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x64;..\..\x64\Debug64\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x64;$(GUIDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,7 +122,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>hdf5.lib;hdf5_cpp.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x86;..\..\Debug\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x86;$(GUIDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,7 +139,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>hdf5.lib;hdf5_cpp.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x64;..\..\x64\Debug64\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../../Resources/windows-libs/HDF5/lib/x64;$(GUIDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
