--- a/Builds/VisualStudio2013/Plugins/NetworkEvents/NetworkEvents.vcxproj
+++ b/Builds/VisualStudio2013/Plugins/NetworkEvents/NetworkEvents.vcxproj
@@ -80,7 +80,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\Debug\bin;../../../../Resources/windows-libs/ZeroMQ/lib_x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir);../../../../Resources/windows-libs/ZeroMQ/lib_x86</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzmq-v120-mt-4_0_4.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -94,7 +94,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\x64\Debug64\bin;../../../../Resources/windows-libs/ZeroMQ/lib_x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir);../../../../Resources/windows-libs/ZeroMQ/lib_x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzmq-v120-mt-4_0_4.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -112,7 +112,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\Debug\bin;../../../../Resources/windows-libs/ZeroMQ/lib_x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir);../../../../Resources/windows-libs/ZeroMQ/lib_x86</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzmq-v120-mt-4_0_4.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -130,7 +130,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\x64\Debug64\bin;../../../../Resources/windows-libs/ZeroMQ/lib_x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir);../../../../Resources/windows-libs/ZeroMQ/lib_x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>libzmq-v120-mt-4_0_4.lib;open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
