Implemented ButtonGroupManager component, MaterialButtonLookAndFeel.
* Implemented ButtonGroupManager.
  It is responsible for positioning of buttons, any animations
  during switching, etc.
* Added MaterialButtonLookAndFeel class which implements
  flat button look and feel following Google Material Design Guidelines.

--- a/Builds/Linux/Makefile
+++ b/Builds/Linux/Makefile
@@ -117,6 +117,8 @@ OBJECTS := \
   $(OBJDIR)/DataWindow_83ce6754.o \
   $(OBJDIR)/SpikeObject_24e8c655.o \
   $(OBJDIR)/MatlabLikePlot_fb09c37f.o \
+  $(OBJDIR)/ButtonGroupManager_75d0fbfa.o \
+  $(OBJDIR)/MaterialButtonLookAndFeel_d7d19ba2.o \
   $(OBJDIR)/MaterialSliderLookAndFeel_c97dd613.o \
   $(OBJDIR)/CustomLookAndFeel_fcb2406a.o \
   $(OBJDIR)/CustomArrowButton_206e4278.o \
@@ -492,6 +494,16 @@ $(OBJDIR)/SpikeObject_24e8c655.o: ../../Source/Processors/Visualization/SpikeObj
 $(OBJDIR)/MatlabLikePlot_fb09c37f.o: ../../Source/Processors/Visualization/MatlabLikePlot.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling MatlabLikePlot.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/ButtonGroupManager_75d0fbfa.o: ../../Source/UI/Utils/ButtonGroupManager.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling ButtonGroupManager.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/MaterialButtonLookAndFeel_d7d19ba2.o: ../../Source/UI/LookAndFeel/MaterialButtonLookAndFeel.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling MaterialButtonLookAndFeel.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/MaterialSliderLookAndFeel_c97dd613.o: ../../Source/UI/LookAndFeel/MaterialSliderLookAndFeel.cpp
