Implemented LinearSmoothedValueAtomic class.
* Implemented LinearSmoothedValueAtomic class based on the
  JUCE 4.0 library' LinearSmoothedValue class but with some improvements
  that were suggested by Timur Doumler during his JUCE Summit 2015
  talk.
* LinearSmoothedValueAtomic is very convenient to use with float values
  that need linearly smoothed behaviour (like volume, etc.) and which
  are shared between several threads (i.e. audio and GUI).
* This class guarantees we won't have any race conditions and it will
  remains lock-free because of using std::atomic inside it.

--- a/Builds/VisualStudio2012/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj.filters
@@ -1896,6 +1896,9 @@
     <ClInclude Include="..\..\Source\Processors\PlaceholderProcessor\PlaceholderProcessor.h">
       <Filter>open-ephys\Source\Processors\PlaceholderProcessor</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\Dsp\LinearSmoothedValueAtomic.h">
+      <Filter>open-ephys\Source\Processors\Dsp</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Dsp\Bessel.h">
       <Filter>open-ephys\Source\Processors\Dsp</Filter>
     </ClInclude>
