--- a/Builds/VisualStudio2012/open-ephys.vcxproj
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj
@@ -2005,6 +2005,8 @@
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h"/>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Resources\Icons\icon-large.png"/>
+    <None Include="..\..\Resources\Icons\icon-small.png"/>
     <None Include="..\..\Resources\Fonts\cpmono-black-serialized"/>
     <None Include="..\..\Resources\Fonts\cpmono-bold-serialized"/>
     <None Include="..\..\Resources\Fonts\cpmono-extralight-serialized"/>
@@ -2083,6 +2085,7 @@
     <None Include="..\..\JuceLibraryCode\modules\juce_gui_extra\juce_module_info"/>
     <None Include="..\..\JuceLibraryCode\modules\juce_opengl\juce_module_info"/>
     <None Include="..\..\JuceLibraryCode\modules\juce_video\juce_module_info"/>
+    <None Include=".\icon.ico"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include=".\resources.rc"/>
