--- a/Builds/VisualStudio2012/open-ephys.vcxproj
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj
@@ -310,6 +310,8 @@
     <ClCompile Include="..\..\Source\Processors\Parameter\ParameterEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Parameter\Parameter.cpp"/>
     <ClCompile Include="..\..\Source\Processors\ProcessorGraph\ProcessorGraph.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\RecordNode\DataQueue.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\RecordNode\RecordThread.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\OriginalRecording.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\RecordEngine.cpp"/>
@@ -1525,6 +1527,9 @@
     <ClInclude Include="..\..\Source\Processors\Parameter\ParameterEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\Parameter\Parameter.h"/>
     <ClInclude Include="..\..\Source\Processors\ProcessorGraph\ProcessorGraph.h"/>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\DataQueue.h"/>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\EventQueue.h"/>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\RecordThread.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\OriginalRecording.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\RecordEngine.h"/>
