--- a/Builds/VisualStudio2013/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2013/open-ephys.vcxproj.filters
@@ -607,6 +607,9 @@
     <ClCompile Include="..\..\Source\Processors\Visualization\MatlabLikePlot.cpp">
       <Filter>open-ephys\Source\Processors\Visualization</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\UI\Utils\TiledButtonGroupManager.cpp">
+      <Filter>open-ephys\Source\UI\Utils</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\UI\Utils\LinearButtonGroupManager.cpp">
       <Filter>open-ephys\Source\UI\Utils</Filter>
     </ClCompile>
@@ -2111,6 +2114,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Visualization\MatlabLikePlot.h">
       <Filter>open-ephys\Source\Processors\Visualization</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\UI\Utils\TiledButtonGroupManager.h">
+      <Filter>open-ephys\Source\UI\Utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\UI\Utils\LinearButtonGroupManager.h">
       <Filter>open-ephys\Source\UI\Utils</Filter>
