Moved ChannelSelector's parser related components to the separate class.
* Created SlicerChannelSelectorComponent class which holds inside
  all ChannelSelector's parser related components and which
  takes responsibility for parsing selected range, etc.
* Added possibility to collapse parser related components.
* Added animations.
* UI improvements.
* Minor bugs fixes.

--- a/Builds/VisualStudio2012/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj.filters
@@ -3713,6 +3713,9 @@
     <None Include="..\..\Resources\Images\Icons\IntanIcon.png">
       <Filter>open-ephys\Resources\Images\Icons</Filter>
     </None>
+    <None Include="..\..\Resources\Images\Buttons\dropdown_arrow.png">
+      <Filter>open-ephys\Resources\Images\Buttons</Filter>
+    </None>
     <None Include="..\..\Resources\Images\Buttons\muteoff.png">
       <Filter>open-ephys\Resources\Images\Buttons</Filter>
     </None>
