PluginGenerator: basic implementation. Some refactoring.
* Basic implemntation of Open Ephys Plugin Generator.
  Now it generates empty processor & editor. To compile plugin with
  current plugin build systems we just need to copy "Source" folder
  of our plugin into plugin-GUI/Source/Plugins/ and give it some
  valuable name.
* ExampleProcessor, ExampleEditor classes refactoring and stylystic
  fixes.

--- a/PluginGenerator/Builds/MacOSX/Info-App.plist
+++ b/PluginGenerator/Builds/MacOSX/Info-App.plist
@@ -25,9 +25,9 @@
     <key>CFBundleIdentifier</key>
     <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
     <key>CFBundleName</key>
-    <string>Projucer</string>
+    <string>OpenEphys_PluginGenerator</string>
     <key>CFBundleDisplayName</key>
-    <string>Projucer</string>
+    <string>OpenEphys_PluginGenerator</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleSignature</key>
@@ -37,7 +37,7 @@
     <key>CFBundleVersion</key>
     <string>4.2.1</string>
     <key>NSHumanReadableCopyright</key>
-    <string></string>
+    <string>Open Ephys</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>CFBundleDocumentTypes</key>
